Fixed font sizes and spacing for small devices

--- a/src/component-style.css
+++ b/src/component-style.css
@@ -428,9 +428,8 @@ ion-icon {
 .menu-button-sm {
   border-left: solid 1px rgba(116, 12, 220, 0.285);
   padding-left: 2.6rem;
-
+  height: 100%;
   display: flex;
-
   align-items: center;
   justify-content: center;
 }
